# routers/router.go
@@ -3,13 +3,15 @@ package routers
 import (
 	"gin-blog/middleware/jwt"
 	"gin-blog/pkg/setting"
+	"gin-blog/pkg/upload"
 	"gin-blog/routers/api"
 	v1 "gin-blog/routers/api/v1"
 	"github.com/gin-gonic/gin"
+	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/swaggo/gin-swagger/swaggerFiles"
+	"net/http"
 
 	"gin-blog/docs" // docs is generated by Swag CLI, you have to import it.
-	"github.com/swaggo/gin-swagger"
-	"github.com/swaggo/gin-swagger/swaggerFiles"
 )
 
 func InitRouter() *gin.Engine {
@@ -17,13 +19,25 @@ func InitRouter() *gin.Engine {
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
 
-	gin.SetMode(setting.RunMode)
+	gin.SetMode(setting.ServerSetting.RunMode)
+
+	r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
 
 	r.GET("/auth", api.GetAuth)
 
+	// programatically set swagger info
+	docs.SwaggerInfo.Title = "gin-blog API"
+	docs.SwaggerInfo.Description = "gin-blog api"
+	docs.SwaggerInfo.Version = "1.0"
+	docs.SwaggerInfo.BasePath = "/"
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	r.POST("/upload", api.UploadImage)
+
 	apiv1 := r.Group("/api/v1")
+	apiv1.Use(jwt.JWT())
 	{
-		tags := apiv1.Group("/tags").Use(jwt.JWT())
+		tags := apiv1.Group("/tags")
 		{
 			//获取标签列表
 			tags.GET("", v1.GetTags)
@@ -49,13 +63,6 @@ func InitRouter() *gin.Engine {
 			articles.DELETE(":id", v1.DeleteArticle).Use(jwt.JWT())
 		}
 	}
-
-	// programatically set swagger info
-	docs.SwaggerInfo.Title = "gin-blog API"
-	docs.SwaggerInfo.Description = "gin-blog api"
-	docs.SwaggerInfo.Version = "1.0"
-	docs.SwaggerInfo.BasePath = "/"
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return r
 }
